<resources>
    <string name="app_name">WiFi卫士</string>
    <string name="title_activity_wifi_disable">安全卫士</string>
    <string name="title_bar_shop_null">您还没有添加商铺</string>
    <string name="title_bar_add_wifi">新增热点</string>
    <string name="title_activity_merchant">请选择您的商户地址</string>
    <string name="title_activity_add_shop">新增商铺</string>
    <string name="title_activity_binding_wifi">绑定WiFi热点</string>
    <string name="title_activity_phone_register">手机注册</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_security">Wi-Fi安全</string>
    <string name="title_activity_input_pwd">请输入WiFi密码</string>
    <string name="title_activity_verify_center">验证中心</string>
    <string name="title_activity_update_shop">编辑商户</string>
    <string name="title_activity_update_shop_add_wifi">新增热点</string>
    <string name="title_optimize">安全工具</string>
    <string name="title_security">商户认证</string>
    <string name="title_tool">免费Wi-Fi</string>
    <string name="title_activity_police">WiFi报案</string>
    <string name="title_activity_wifi_optimize">优化Wi-Fi网络</string>
    <string name="title_activity_user_management">账户管理</string>
    <string name="title_activity_binding_phone">绑定手机</string>
    <string name="title_activity_update_pwd">修改密码</string>
    <string name="title_activity_add_user">添加账号</string>
    <string name="title_activity_scan_wifi">查询可疑Wi-Fi</string>
    <string name="title_activity_safe_check">Wi-Fi安检</string>
    <string name="title_activity_wifi_speed">Wi-Fi测速</string>
    <string name="title_activity_wifi_speed_download">下载速度</string>
    <string name="title_activity_wifi_speed_upload">上传速度</string>
    <string name="activity_main_data">数据</string>
    <string name="activity_main_security">商户认证</string>
    <string name="activity_main_optimize">免费WiFi</string>
    <string name="activity_main_tool">安全工具</string>
    <string name="activity_search_not_found_notice">找不到对应商家？创建新商家：%s</string>
    <string name="activity_add_shop_name">请输入商铺名称</string>
    <string name="activity_add_shop_name_null">商铺名称不能为空</string>
    <string name="activity_add_shop_logo_null">请添加商铺logo</string>
    <string name="activity_add_shop_phone">请输入商铺电话</string>
    <string name="activity_add_shop_phone_null">商铺电话不能为空</string>
    <string name="activity_add_shop_address_null">商铺地址不能为空</string>
    <string name="activity_add_shop_person">请输入联系人姓名</string>
    <string name="activity_add_shop_street">请输入详细街道名称</string>
    <string name="activity_input_pwd_key">请输入WiFi密码</string>
    <string name="activity_add_shop_use_address">定位我的位置</string>
    <string name="activity_add_shop_big_category">美食</string>
    <string name="activity_add_shop_small_category">咖啡厅</string>
    <string name="activity_binding_wifi_next">下一步</string>
    <string name="activity_update_shop">保存</string>
    <string name="activity_update_shop_success">保存成功</string>
    <string name="activity_update_shop_exist">商户已经存在，保存失败</string>
    <string name="activity_binding_wifi_binding_no">未绑定</string>
    <string name="text_test">外商大酒店</string>
    <string name="item_add_new_shop">添加新店铺</string>
    <string name="item_add_new_shop_no_login">登录以添加新商铺</string>
    <string name="item_add_new_shop_no_login_notice">添加商铺前需要先登录，绑定账号和商铺</string>
    <string name="dialog_more_add_new_shop">添加新店铺</string>
    <string name="dialog_more_exit">退出登录</string>
    <string name="dialog_category_title">选择一个种类</string>
    <string name="dialog_message_title">删除</string>
    <string name="dialog_message_content">确认删除？</string>
    <string name="dialog_message_ok">确认</string>
    <string name="dialog_message_cancel">取消</string>
    <string name="activity_binding_wifi_binding_yes">已绑定</string>
    <string name="activity_input_pwd_next">绑定</string>
    <string name="activity_police_call">完成报案</string>
    <string name="activity_police_notice">请选择一个或多个想要举报的WiFi热点</string>
    <string name="activity_input_pwd_explain">*非WiFi主人请勿绑定热点，绑定完成后将会录入公安信息安全管理系统，保证您的WiFi安全</string>
    <string name="activity_binding_phone_notice">*为确保您的账号安全，请先绑定手机再使用</string>
    <string name="activity_verify_center_success">Wi-Fi安全，关系你我</string>
    <string name="activity_verify_center_success_des">本平台登记数据将同步至公安系统</string>
    <string name="activity_verify_center_binding_already">您的商铺列表（目前已绑定%1$s个商铺，共%2$s个WiFi热点）</string>
    <string name="activity_verify_center_binding_no_shops">您的商铺列表</string>
    <string name="activity_update_shop_ap_total">当前绑定%1$s个Wi-Fi热点</string>
    <string name="activity_verify_center_binding_number">拥有%1$s个WiFi</string>
    <string name="activity_verify_center_add_shop">添加新商铺</string>
    <string name="activity_register_login">已有账号在此登录</string>
    <string name="activity_register_login_phone">手机注册</string>
    <string name="activity_register_login_weixin">微信登录</string>
    <string name="activity_register_login_weibo">微博登录</string>
    <string name="activity_phone_register_time_count">重新发送</string>
    <string name="activity_phone_register_hint_phone">请输入手机号码</string>
    <string name="activity_add_user_phone">请输入您所需要添加的手机账号</string>
    <string name="activity_update_pwd_old">旧密码</string>
    <string name="activity_update_pwd_new">新密码</string>
    <string name="activity_update_pwd_input_old_pwd">请输入原始密码</string>
    <string name="activity_update_pwd_input_new_pwd">请输入新密码</string>
    <string name="activity_update_pwd_input_new_pwd_again">请再次输入新密码</string>
    <string name="activity_phone_register_hint_pwd">请输入至少六位密码</string>
    <string name="activity_login_hint_pwd">请输入密码</string>
    <string name="activity_login_phone_exist">手机号已被使用</string>
    <string name="activity_phone_register_hint_code">请输入四位验证码</string>
    <string name="activity_phone_button_register">注册</string>
    <string name="activity_phone_text_register">暂无账号？立即注册</string>
    <string name="activity_phone_text_login">已有账号？前往登录</string>
    <string name="activity_phone_text_reset_pwd">忘记密码</string>
    <string name="activity_shop_manager_dialog_title">删除商铺</string>
    <string name="activity_sys_setting_logout_title">退出登录</string>
    <string name="activity_sys_setting_logout_content">确定退出当前账号？</string>
    <string name="activity_shop_manager_dialog_message">该商铺的所有相关信息将被删除，请谨慎删除！</string>
    <string name="activity_bind_wifi_dialog_title">绑定Wi-Fi</string>
    <string name="activity_bind_wifi_dialog_message">该Wi-Fi已被绑定，请确认该Wi-Fi属于你，之前的商铺将被解除绑定！</string>
    <string name="activity_phone_button_binding">完成</string>
    <string name="activity_phone_button_reset">重置</string>
    <string name="activity_phone_button_verify">验证手机</string>
    <string name="activity_phone_button_login">登录</string>
    <string name="activity_launch_register_shop_button">立即登记商铺</string>
    <string name="activity_no_shops_button">一键登记验证</string>
    <string name="activity_no_wifi_button">立即打开手机Wi-Fi</string>
    <string name="activity_phone_button_register_split">其他方式登录</string>
    <string name="activity_phone_button_register_send_sms_code">获取验证码</string>
    <string name="activity_phone_button_register_notice_phone_null">手机号不能为空</string>
    <string name="activity_phone_button_register_notice_code_null">短信验证码不能为空</string>
    <string name="activity_phone_button_register_notice_phone_err">电话号码不能包含非法字符</string>
    <string name="activity_phone_button_register_notice_pwd_null">密码不能为空</string>
    <string name="activity_phone_button_register_notice_pwd_less_six">密码不能小于6位</string>
    <string name="activity_phone_button_register_notice_pwd_ok">密码只能由字母和数字组成</string>
    <string name="activity_phone_button_register_notice_pwd_fail">密码不能包含非法字符</string>
    <string name="activity_phone_button_register_notice_pwd_err">密码错误</string>
    <string name="activity_login_verfy_error">用户名或密码错误</string>
    <string name="activity_login_no_user">用户不存在,请确认账号或注册新账号</string>
    <string name="activity_login_wrong_pwd">密码错误</string>
    <string name="activity_login_account_frozen">账户被冻结</string>
    <string name="activity_login_please_binding_phone">请绑定手机号，保障账号安全</string>
    <string name="activity_user_management_binding_phone">绑定手机</string>
    <string name="activity_user_management_update_pwd">修改密码</string>
    <string name="activity_user_management_add_user">添加账户</string>
    <string name="activity_add_user_prompt">请选择添加账号的权限</string>
    <string name="activity_add_user_boss">老板</string>
    <string name="activity_add_user_manager">店长</string>
    <string name="activity_add_user_emp">店员</string>
    <string name="activity_add_user_boss_summary">拥有全部权限</string>
    <string name="activity_add_user_manager_summary">拥有添加新店铺，查看店铺数据，优化店铺Wi-Fi的权限</string>
    <string name="activity_add_user_emp_summary">只有优化店铺Wi-Fi的权限</string>
    <string name="activity_optimize_click">点击优化</string>
    <string name="activity_optimize_state">最佳状态</string>
    <string name="activity_no_shops_notice_1">登记录入WiFi信息安全平台</string>
    <string name="activity_no_shops_notice_2">保证您的商铺WiFi安全</string>
    <string name="activity_launch_reg_notice_1">登记录入WiFi信息安全平台</string>
    <string name="activity_launch_reg_notice_2">才能更好地查看您的商铺数据</string>
    <string name="activity_no_wifi_notice_1">当前网络状态不可用</string>
    <string name="activity_no_wifi_notice_2"> 请点击按钮开启Wi-Fi网络</string>
    <string name="activity_location_use_address">使用此地址</string>
    <string name="activity_binding_wifi_shop">当前商铺</string>
    <string name="activity_binding_wifi_connected">连接热点</string>
    <string name="activity_binding_wifi_as_my_wifi">绑定为我的WiFi热点</string>
    <string name="activity_binding_wifi_select_wifi">选取对应商铺的WiFi热点</string>
    <string name="activity_scan_wifi_searching">查询中...</string>
    <string name="activity_scan_wifi_false_wifi">发现%1$d个可疑热点</string>
    <string name="activity_shop_manager_address">地址：%1$s</string>
    <string name="activity_scan_wifi_false_wifi_no">附近没有可疑的Wifi热点</string>
    <string name="activity_sus_wifi_count">发现附近有%1$d个可疑Wi-Fi热点</string>
    <string name="activity_system_settings_user">账号：%1$s</string>
    <string name="activity_system_settings_user_shop">拥有%1$s个商铺，%2$s个Wi-Fi AP</string>
    <string name="fragment_verify_shop_time">更新与%1$s</string>
    <string name="activity_sus_wifi_recheck">重新检测</string>
    <string name="activity_sus_wifi_list_prompt">可疑的WiFi热点列表</string>
    <string name="activity_sus_wifi_list_sus">可疑</string>
    <string name="activity_safe_check_checking">检测中...</string>
    <string name="activity_safe_check_option_1">检测Wi-Fi密码安全</string>
    <string name="activity_safe_check_option_2">检测Wi-Fi网络是否可连接</string>
    <string name="activity_safe_check_option_3">检测DNS安全</string>
    <string name="activity_safe_check_option_4">检测ARP欺诈</string>
    <string name="activity_safe_check_option_5">检测是否为虚假Wi-Fi</string>
    <string name="activity_safe_check_err">可疑的钓鱼Wi-Fi</string>
    <string name="activity_safe_check_warn_4">发现4项问题</string>
    <string name="activity_safe_check_warn_3">发现3项问题</string>
    <string name="activity_safe_check_warn_2">发现2项问题</string>
    <string name="activity_safe_check_warn_1">发现1项问题</string>
    <string name="activity_safe_check_ok">WiFi超安全</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="activity_optmize_result">优化完成,为您网速提升%1$s%%</string>
    <string name="activity_toast_info_parse_data_error">抱歉，解析数据时出现异常！</string>
    <string name="fragment_data_new_person">新增访客（%1$s人）</string>
    <string name="fragment_data_total_ups_downs">累计涨跌率</string>
    <string name="fragment_data_new_ups_and_downs">新增涨跌率</string>
    <string name="fragment_data_yesterday_person_title">昨日访客（人）</string>
    <string name="fragment_data_yesterday_add_person_title">昨日新增（人）</string>
    <string name="fragment_data_total_title">累计访客数</string>
    <string name="fragment_data_total_today_title">今日累计</string>
    <string name="fragment_data_total_yesterday_title">昨日累计</string>
</resources>