<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_old_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_more"
            android:text="@string/activity_update_pwd_old"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_small"/>

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_old_pwd"
            android:layout_alignTop="@+id/tv_old_pwd"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_old_pwd"
            android:background="@null"
            android:hint="@string/activity_update_pwd_input_old_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/add_shop_text"
            android:textColorHint="@color/add_shop_text_hint_color"
            android:textSize="@dimen/text_small"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_more"
            android:layout_below="@+id/tv_old_pwd"
            android:layout_toRightOf="@+id/tv_old_pwd"
            android:background="@color/fragment_security_split"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_new_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_more"
            android:text="@string/activity_update_pwd_new"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_small"/>

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_new_pwd"
            android:layout_alignTop="@+id/tv_new_pwd"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_new_pwd"
            android:background="@null"
            android:hint="@string/activity_update_pwd_input_new_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/add_shop_text"
            android:textColorHint="@color/add_shop_text_hint_color"
            android:textSize="@dimen/text_small"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_more"
            android:layout_below="@+id/tv_new_pwd"
            android:layout_toRightOf="@+id/tv_new_pwd"
            android:background="@color/fragment_security_split"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_new_pwd_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_more"
            android:text="@string/activity_update_pwd_new"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/text_small"/>

        <EditText
            android:id="@+id/et_new_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_new_pwd_again"
            android:layout_alignTop="@+id/tv_new_pwd_again"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_new_pwd_again"
            android:background="@null"
            android:hint="@string/activity_update_pwd_input_new_pwd_again"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/add_shop_text"
            android:textColorHint="@color/add_shop_text_hint_color"
            android:textSize="@dimen/text_small"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_more"
            android:layout_below="@+id/tv_new_pwd_again"
            android:layout_toRightOf="@+id/tv_new_pwd_again"
            android:background="@color/fragment_security_split"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_update_my_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_button_margin_left_right"
        android:layout_marginRight="@dimen/common_button_margin_left_right"
        android:layout_marginTop="@dimen/activity_update_pwd_button_margin_top"
        android:background="@drawable/button_phone_binding_bg"
        android:paddingBottom="@dimen/common_button_padding_bot_top"
        android:paddingTop="@dimen/common_button_padding_bot_top"
        android:text="@string/activity_phone_button_binding"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small"/>
</LinearLayout>