<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/common_padding_more"
            android:layout_marginLeft="@dimen/common_padding_more"
            android:layout_marginTop="@dimen/common_padding_more">

            <ImageView
                android:id="@+id/iv_blue_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/blue_shape"/>

            <TextView
                android:id="@+id/tv_shape_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_sus_wifi_text_size"
                android:textStyle="bold"
                tools:text="1"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_found_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/common_padding_more"
            android:textColor="@color/verify_center_text_color"
            android:textSize="@dimen/text_small"
            tools:text="@string/activity_sus_wifi_count"/>

        <TextView
            android:id="@+id/tv_recheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/frameLayout"
            android:layout_alignRight="@+id/tv_found_count"
            android:background="@drawable/text_bottom_bg"
            android:paddingBottom="2dp"
            android:text="@string/activity_sus_wifi_recheck"
            android:textColor="@color/theme_color"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/theme_gray_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_more"
            android:text="@string/activity_sus_wifi_list_prompt"
            android:textColor="@color/binding_wifi_text_notice"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_sus_wifi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:scrollbars="none"/>
</LinearLayout>